--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.40.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.8.1",
     "mongoose": "^7.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
+    "stripe": "^14.1.0",
     "validator": "^13.11.0"
   }
 }
